<resources>
    <string name="app_name_user">UrbanMarket</string>
    <string name="app_name_delivery">UM Delivery</string>
    <string name="text_intro1">Need Fruits Now?</string>
    <string name="text_intro2">Hassle Free Payments</string>
    <string name="text_intro3">Doorstep Deliveries</string>
    <string name="desc_intro1">Select wide range of products from fresh fruits.</string>
    <string name="desc_intro2">Pay as per your convenience, we accept all credit and debit cards and Cash on delivery</string>
    <string name="desc_intro3">Our delivery will be delivered within 5&#8211;8 hours</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_store">Store</string>
    <string name="title_cart">Cart</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_categories">Categories</string>
    <string name="title_products">Products</string>
    <string name="label_next">Next</string>
    <string name="label_get_start">Get Started</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile">(+91) Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_verify">Verify</string>
    <string name="action_next">Next</string>
    <string name="action_allow">Allow</string>
    <string name="welcome">"Welcome !"</string>
    <string name="action_change_address">Change Address</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_cancel">Cancel</string>\
    <string name="action_completed">Complete</string>


    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>

    //
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="no_data">No Data</string>
    <string name="title_activity_products_list">ProductsListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_order_amount">Order Amount :</string>
    <string name="label_delivery_charge">Delivery Charges : </string>
    <string name="label_total_amount">Total Amount : </string>
    <string name="label_confirm_order">Confirm Order</string>
    <string name="title_activity_order_info">Order Details</string>
    <string name="label_payment_details">Payment Details</string>
    <string name="label_address_details">Address Details</string>
    <string name="label_place_order">Place Order</string>
    <string name="label_ok_got_it">Ok, got it.</string>
    <string name="title_activity_address">Delivery Address</string>
    <string name="title_price_details">Price Details</string>
    <string name="title_address_line_1">Address *</string>
    <string name="title_address_line_2">Land Mark *</string>
    <string name="title_address_city">City *</string>
    <string name="title_address_state">State *</string>
    <string name="title_address_zip">Pincode *</string>
    <string name="action_save">Save</string>
    <string name="action_add_address">Add Address</string>
    <string name="title_activity_delivery_boy_main">MainActivity</string>
    <string name="error_address">Please Add Deliver Address</string>

</resources>