<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/space_10x"
    android:layout_marginEnd="@dimen/space_10x">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_address_line_1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_address_line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/space_16x"
        app:boxBackgroundColor="@color/white">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_address_line_2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_address_line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_address_line_1_layout"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="@dimen/space_10x">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_city_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_address_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_address_line_2_layout"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="@dimen/space_10x">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_state_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_address_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_city_layout"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="@dimen/space_10x">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_zip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_address_zip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_state_layout"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="@dimen/space_10x">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_16x"
        app:layout_constraintTop_toBottomOf="@+id/text_input_zip_layout"/>

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>